Added Back Button to have back navigation in iOS.

--- a/XRDemo.iOS/XRDemo.iOS.csproj
+++ b/XRDemo.iOS/XRDemo.iOS.csproj
@@ -157,4 +157,7 @@
       <Name>XRDemo</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\back.png" />
+  </ItemGroup>
 </Project>
