CPP Demo added.

--- a/XRDemo/XRDemo.csproj
+++ b/XRDemo/XRDemo.csproj
@@ -14,11 +14,22 @@
     <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="sqlite-net-pcl" Version="1.5.231" />
+    <PackageReference Include="Xam.Plugins.Notifier" Version="3.0.1" />
+    <PackageReference Include="MathFuncs" Version="1.0.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="WebServiceDemo\" />
     <Folder Include="SqliteDemo\" />
     <Folder Include="BasicUIDemo\" />
     <Folder Include="SqliteDemo\Data\" />
+    <Folder Include="CPPMathDemo\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Mono.Android">
+      <HintPath>..\..\..\..\..\Library\Frameworks\Xamarin.Android.framework\Versions\9.1.8-0\lib\xamarin.android\xbuild-frameworks\MonoAndroid\v8.1\Mono.Android.dll</HintPath>
+    </Reference>
+    <Reference Include="Xamarin.iOS">
+      <HintPath>..\..\..\..\..\Library\Frameworks\Xamarin.iOS.framework\Versions\12.2.1.15\lib\mono\Xamarin.iOS\Xamarin.iOS.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
