--- a/XRDemo.iOS/XRDemo.iOS.csproj
+++ b/XRDemo.iOS/XRDemo.iOS.csproj
@@ -149,6 +149,9 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.6.0.264807" />
+    <PackageReference Include="MathFuncs">
+      <Version>1.0.0</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
