--- a/XRDemo.Android/XRDemo.Android.csproj
+++ b/XRDemo.Android/XRDemo.Android.csproj
@@ -57,11 +57,17 @@
     <PackageReference Include="MathFuncs">
       <Version>1.0.0</Version>
     </PackageReference>
+    <PackageReference Include="Plugin.BluetoothLE">
+      <Version>6.2.3</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="BTDemo\BluetoothDemo.xaml.cs">
+      <DependentUpon>BluetoothDemo.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -93,12 +99,19 @@
     <Folder Include="Resources\drawable-xhdpi\" />
     <Folder Include="Resources\drawable-xxhdpi\" />
     <Folder Include="Resources\drawable-xxxhdpi\" />
+    <Folder Include="BTDemo\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\XRDemo\XRDemo.csproj">
       <Project>{358DB63D-B42C-4A12-8782-4F60BF218E8D}</Project>
       <Name>XRDemo</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="BTDemo\BluetoothDemo.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
  <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
