--- a/XRDemo.iOS/XRDemo.iOS.csproj
+++ b/XRDemo.iOS/XRDemo.iOS.csproj
@@ -96,6 +96,9 @@
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UNUserNotificationCenterDelegate.cs" />
+    <Compile Include="BTDemo\BluetoothDemo.xaml.cs">
+      <DependentUpon>BluetoothDemo.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
@@ -153,6 +156,9 @@
     <PackageReference Include="MathFuncs">
       <Version>1.0.0</Version>
     </PackageReference>
+    <PackageReference Include="Plugin.BluetoothLE">
+      <Version>6.2.3</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
@@ -163,5 +169,14 @@
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\back.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="BTDemo\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="BTDemo\BluetoothDemo.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
